crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__import_stmt-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                            "b",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                            "b",
                            "c",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                            "b",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                    ImportSymbol {
                        path: [
                            "a",
                            "c",
                        ],
                        alias: Some(
                            "y",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                            "b",
                            "c",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                    ImportSymbol {
                        path: [
                            "a",
                            "d",
                            "e",
                        ],
                        alias: Some(
                            "y",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                            "b",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                    ImportSymbol {
                        path: [
                            "c",
                            "d",
                        ],
                        alias: Some(
                            "y",
                        ),
                    },
                ],
            },
        ),
        Import(
            Import {
                symbols: [
                    ImportSymbol {
                        path: [
                            "a",
                        ],
                        alias: Some(
                            "x",
                        ),
                    },
                    ImportSymbol {
                        path: [
                            "b",
                        ],
                        alias: Some(
                            "y",
                        ),
                    },
                    ImportSymbol {
                        path: [
                            "c",
                        ],
                        alias: Some(
                            "z",
                        ),
                    },
                ],
            },
        ),
    ],
}
