crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__loop_stmts-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Loop(
            While(
                While {
                    cond: Literal(
                        Bool(
                            true,
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            While(
                While {
                    cond: Literal(
                        Bool(
                            true,
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
