crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__loop_stmts-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Loop(
            For(
                For {
                    item: "i",
                    iter: Expr(
                        Call(
                            Call {
                                target: GetVar(
                                    GetVar {
                                        name: "iter",
                                    },
                                ),
                                args: Args {
                                    pos: [],
                                    kw: [],
                                },
                            },
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Expr(
                        Call(
                            Call {
                                target: GetVar(
                                    GetVar {
                                        name: "iter",
                                    },
                                ),
                                args: Args {
                                    pos: [],
                                    kw: [],
                                },
                            },
                        ),
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "b",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "b",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            inclusive: false,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Literal(
                                Int(
                                    0,
                                ),
                            ),
                            end: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "b",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            For(
                For {
                    item: "i",
                    iter: Range(
                        IterRange {
                            start: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "a",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            end: Call(
                                Call {
                                    target: GetVar(
                                        GetVar {
                                            name: "b",
                                        },
                                    ),
                                    args: Args {
                                        pos: [],
                                        kw: [],
                                    },
                                },
                            ),
                            inclusive: true,
                        },
                    ),
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
