crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__loop_stmts-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Loop(
                            Infinite(
                                Infinite {
                                    body: [
                                        Expr(
                                            GetVar(
                                                GetVar {
                                                    name: "a",
                                                },
                                            ),
                                        ),
                                        Expr(
                                            GetVar(
                                                GetVar {
                                                    name: "a",
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            ),
                        ),
                    ],
                },
            ),
        ),
    ],
}
