crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__loop_stmts.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
        Loop(
            Infinite(
                Infinite {
                    body: [
                        Pass,
                    ],
                },
            ),
        ),
    ],
}
