crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__object_literal_expr-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Expr(
            Literal(
                Object(
                    [
                        (
                            GetVar(
                                GetVar {
                                    name: "a",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "e",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Object(
                    [
                        (
                            GetVar(
                                GetVar {
                                    name: "a",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "e",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Object(
                    [
                        (
                            GetVar(
                                GetVar {
                                    name: "a",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "c",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            GetVar(
                                GetVar {
                                    name: "e",
                                },
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
