crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__object_literal_expr.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [],
    body: [
        Expr(
            Literal(
                Object(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Object(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Object(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "d",
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: "f",
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
